--- a/Automation.org/pom.xml
+++ b/Automation.org/pom.xml
@@ -2,6 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>AutomationFrameWork</groupId>
   <artifactId>Automation.org</artifactId>
+  <name>AutomationTest</name>
+  <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+     </properties>
+
   <dependencies>
   <dependency>
   <groupId>org.testng</groupId>
